<?xml version="1.0"?>
<package format="2">
  <name>buzzer</name>
  <version>0.0.0</version>
  <description>The buzzer package</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>pigpio</depend>
  <export>
  </export>
</package>
